Add Java 15 & 16 features